--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,7 +30,6 @@
                     <a class="nav-item nav-link" href="/about">About</a>
                     <a class="nav-item nav-link" href="/history">History</a>
                     <a class="nav-item nav-link" href="/login">Login</a>
-                    <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </div>
             </div>
         </nav>
@@ -39,10 +38,13 @@
     {% block messages %}
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-    <div class="alert alert-dark" role="alert">
+    <div class="alert alert-dark alert-dismissible fade show" role="alert">
         {% for message in messages %}
         {{ message }}
         {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
     {% endif %}
     {% endwith %}
