--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -3,62 +3,46 @@
 {% block title %}Home{% endblock %}
 
 {% block messages %}
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-    {% for message in messages %}
-    {{ message }}
-    {% endfor %}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
-{% endif %}
-{% endwith %}
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {% for message in messages %}
+              {{ message }}
+            {% endfor %}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+      {% endif %}
+    {% endwith %}
 {% endblock %}
 
 {% block content %}
 <style>
-    .form input {
+    .btn{
+        background-color: #FF0000;
         border-radius: 25px;
     }
-    .message-container {
-        background-color: grey;
-        height: 100px;
-        width: 75px;
-    }
-
-    .form button:hover,
-    .form button:active,
-    .form button:focus {
+    .form button:hover,.form button:active,.form button:focus {
         background: #FF0000;
-        padding-left: 5px;
-        border-radius: 25px;
     }
 </style>
-<div class="row" style="padding-top:10px;">
-    <div class="col">
-        <hr>
+<div class="row" style="padding-top:10px;" >
+    <div class="col"><hr></div>
+    <div class="col-auto"><p class="h3" align="center">Start Chatting</p>
+    <a href="/logout">logout</a>
     </div>
-    <div class="col-auto">
-        <p class="h3" align="center">Start Chatting</p>
-        <a class="nav-item nav-link" href="/logout" align="center">Logout</a>
-    </div>
-    <div class="col">
-        <hr>
-    </div>
+    <div class="col"><hr></div>
 </div>
 <div class="container">
-    <div class="message-contaier">
-        <div id="messages" class="overflow-auto msgs" style="overflow-y: scroll; height:500px;">
-        </div>
+    <div id="messages" class="overflow-auto msgs" style="overflow-y: scroll; height:500px;">
     </div>
     <form id="msgForm" action="" method="POST" style="bottom:0; margin: 0% 0% 0% 0%;">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Message" aria-label="Message" id="msg">
-            <div class="input-group-append">
+              <input type="text" class="form-control" placeholder="Message" aria-label="Message" id="msg">
+              <div class="input-group-append">
                 <button class="btn btn-success" type="submit" id="sendBtn">Send</button>
-            </div>
+              </div>
         </div>
     </form>
 </div>
