Added History Component

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -23,8 +23,12 @@
         background-color: #FF0000;
         border-radius: 25px;
     }
-    .form button:hover,.form button:active,.form button:focus {
+    form button:hover,.form button:active,.form button:focus {
         background: #FF0000;
+    }
+
+    .form-control{
+        border-radius: 25px;
     }
 </style>
 <div class="row" style="padding-top:10px;" >
