--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
+        body{
+                background-color: black;
+            }
         /* Chat containers */
         .container {
           border: 2px solid #dedede;
