--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -4,10 +4,26 @@
 
 {% block content %}
 
-<div class="overflow-auto msgs" style="overflow-y: scroll; height:500px;">
-    {% for msg in history%}
-    <div class="container darker"><b style="color:#000" class="left">{{msg["name"]}}</b><p>{{msg["message"]}}</p><span class="time-left"></span></div>
-    {% endfor%}
+<div class="row" style="padding-top:10px;">
+    <div class="col">
+        <hr>
+    </div>
+    <div class="col-auto">
+        <p class="h3" align="center">Message History</p>
+    </div>
+    <div class="col">
+        <hr>
+    </div>
+</div>
+
+<div class="container">
+    <div class="overflow-auto msgs" style="overflow-y: scroll; height:500px;">
+        {% for msg in history %}
+        <div class="container darker"><b style="color:#000" class="left">{{msg["name"]}}</b>
+            <p>{{msg["message"]}}</p><span class="time-left">{{msg["time"]}}</span>
+        </div>
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
