--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -19,6 +19,9 @@
 
 {% block content %}
 <style>
+    body {
+    background-color: black;
+     }
     .btn{
         background-color: #FF0000;
         border-radius: 25px;
@@ -27,19 +30,31 @@
         background: #FF0000;
     }
 
+    form input{
+        background-color: gainsboro;
+    }
+
     .form-control{
         border-radius: 25px;
+    }
+
+    .input-group{
+        padding-top: 25px;
+    }
+
+    .logger{
+        color: white;
     }
 </style>
 <div class="row" style="padding-top:10px;" >
     <div class="col"><hr></div>
-    <div class="col-auto"><p class="h3" align="center">Start Chatting</p>
-    <a href="/logout">logout</a>
+    <div class="col-auto"><p class="h3" align="center" style="color: white;">Start Chatting</p>
+    <a href="/logout" class="logger">logout</a>
     </div>
     <div class="col"><hr></div>
 </div>
 <div class="container">
-    <div id="messages" class="overflow-auto msgs" style="overflow-y: scroll; height:500px;">
+    <div id="messages" class="overflow-auto msgs" style="overflow-y: scroll; height:500px; background-color: gainsboro;">
     </div>
     <form id="msgForm" action="" method="POST" style="bottom:0; margin: 0% 0% 0% 0%;">
         <div class="input-group mb-3">
